deploy: 642fcd6228028fd0bf4d36a129ca0ded6fc53506

--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -657,10 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\frac{du}{dr}=\\frac{r}{2\\mu}\\frac{dp}{dx}\n",
-    "\\label{eq27}\n",
-    "\\end{equation}"
+    "$$\\frac{du}{dr}=\\frac{r}{2\\mu}\\frac{dp}{dx}$$(eq27)"
    ]
   },
   {
@@ -674,10 +671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u(r)=-\\frac{1}{4\\mu}\\frac{dp}{dx}(R^2-r^2)\n",
-    "\\label{eq28}\n",
-    "\\end{equation}"
+    "$$u(r)=-\\frac{1}{4\\mu}\\frac{dp}{dx}(R^2-r^2)$$(eq28)"
    ]
   },
   {
@@ -698,10 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Q=\\int^R_0 2\\pi r u dr = - \\frac{\\pi R^4}{8\\mu}\\frac{dp}{dx} = \\pi R^2 \\bar{\\mu}\n",
-    "\\label{eq29}\n",
-    "\\end{equation}"
+    "$$Q=\\int^R_0 2\\pi r u dr = - \\frac{\\pi R^4}{8\\mu}\\frac{dp}{dx} = \\pi R^2 \\bar{\\mu}$$(eq29)"
    ]
   },
   {
@@ -715,10 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\bar{\\mu}=-\\frac{R^2}{8\\mu}\\frac{dp}{dx}=\\frac{1}{2}u_{max}\n",
-    "\\label{eq30}\n",
-    "\\end{equation}\n",
+    "$$\\bar{\\mu}=-\\frac{R^2}{8\\mu}\\frac{dp}{dx}=\\frac{1}{2}u_{max}$$(eq30)\n",
     "and $u_{max}$ is the maximum velocity."
    ]
   },
@@ -726,10 +714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u_{max}=-\\frac{R^2}{4\\mu}\\frac{dp}{dx}\n",
-    "\\label{eq31}\n",
-    "\\end{equation}"
+    "$$u_{max}=-\\frac{R^2}{4\\mu}\\frac{dp}{dx}$$(eq31)"
    ]
   },
   {
@@ -743,10 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "f=\\frac{-4R}{\\rho\\bar{\\mu}^2}\\frac{dp}{dx}\n",
-    "\\label{eq32}\n",
-    "\\end{equation}"
+    "$$f=\\frac{-4R}{\\rho\\bar{\\mu}^2}\\frac{dp}{dx}$$(eq32)"
    ]
   },
   {
@@ -760,10 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Re = \\frac{\\rho \\bar{u}D}{\\mu}\n",
-    "\\label{eq33}\n",
-    "\\end{equation}\n",
+    "$$Re = \\frac{\\rho \\bar{u}D}{\\mu}$$(eq33)\n",
     "where $D=2R$ is the pipe diameter."
    ]
   },
@@ -778,10 +757,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "f = \\frac{64}{Re}\n",
-    "\\label{eq34}\n",
-    "\\end{equation}"
+    "$$f = \\frac{64}{Re}\n",
+    "$$(eq34)"
    ]
   },
   {
@@ -795,10 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "f=0.3164Re^{-1/4}\n",
-    "\\label{eq35}\n",
-    "\\end{equation}"
+    "$$f=0.3164Re^{-1/4}$$(eq35)"
    ]
   },
   {
@@ -819,15 +793,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Re= \\frac{3200*\\bar{u}*200000}{4*10^{19}}\n",
-    "\\label{eq36}\n",
-    "\\end{equation}"
+    "$$Re= \\frac{3200*\\bar{u}*200000}{4*10^{19}}$$(eq36)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -852,10 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Re= \\frac{3200*7.92*10^{-10}*200000}{4*10^{19}}= 1.27*10^{-20}\n",
-    "\\label{eq37}\n",
-    "\\end{equation}"
+    "$$Re= \\frac{3200*7.92*10^{-10}*200000}{4*10^{19}}= 1.27*10^{-20}$$(eq37)"
    ]
   },
   {
@@ -889,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,10 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Q = - \\frac{\\pi R^4}{8\\mu}*\\frac{dp}{ds} = \\frac{\\rho g b R^4}{8\\mu R^{'}}\n",
-    "\\label{eq38}\n",
-    "\\end{equation}"
+    "$$Q = - \\frac{\\pi R^4}{8\\mu}*\\frac{dp}{ds} = \\frac{\\rho g b R^4}{8\\mu R^{'}}$$(eq38)"
    ]
   },
   {
@@ -926,10 +891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "R = \\sqrt[4]{\\frac{8Q\\mu R^{'}}{\\rho g b}} = 0.0133 m\n",
-    "\\label{eq39}\n",
-    "\\end{equation}"
+    "$$R = \\sqrt[4]{\\frac{8Q\\mu R^{'}}{\\rho g b}} = 0.0133 m$$(eq39)"
    ]
   },
   {
@@ -943,10 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\bar{u} = \\frac{Q}{A} = \\frac{\\rho g b R^4}{8\\mu R^{'} \\pi R^2} = 3.01 m/s\n",
-    "\\label{eq40}\n",
-    "\\end{equation}"
+    "$$\\bar{u} = \\frac{Q}{A} = \\frac{\\rho g b R^4}{8\\mu R^{'} \\pi R^2} = 3.01 m/s$$ (eq40)"
    ]
   },
   {
@@ -967,10 +926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\bar{u} = \\frac{2^{9/7}R^{5/7}\\frac{dp}{dy}^{4/7}}{0.3164^{4/7}\\mu^{1/7}\\rho^{3/7}} = 0.84 m/s\n",
-    "\\label{eq41}\n",
-    "\\end{equation}"
+    "$$\\bar{u} = \\frac{2^{9/7}R^{5/7}\\frac{dp}{dy}^{4/7}}{0.3164^{4/7}\\mu^{1/7}\\rho^{3/7}} = 0.84 m/s$$(eq41)"
    ]
   },
   {
@@ -1013,30 +969,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\sum F_y = F_{\\tau(x)} - F{\\tau(x+\\delta x)} + F_p = 0\n",
-    "\\label{eq42}\n",
-    "\\end{equation} "
+    "$$\\sum F_y = F_{\\tau(x)} - F{\\tau(x+\\delta x)} + F_p = 0$$ (eq42)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "F_{\\tau(x)}=\\tau(x)*l =\\mu \\frac{d u}{dx}*l\n",
-    "\\label{eq43}\n",
-    "\\end{equation} "
+    "$$F_{\\tau(x)}=\\tau(x)*l =\\mu \\frac{d u}{dx}*l$$(eq43)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "F_{\\tau(x+\\delta x)}=\\tau(x+\\delta x)*l= (\\tau(x)+\\frac{d \\tau}{d x}\\delta x*l =\\mu (\\frac{d u}{dx}+\\frac{d^2u}{dx^2})*l\n",
-    "\\label{eq44}\n",
-    "\\end{equation} "
+    "$$F_{\\tau(x+\\delta x)}=\\tau(x+\\delta x)*l= (\\tau(x)+\\frac{d \\tau}{d x}\\delta x*l =\\mu (\\frac{d u}{dx}+\\frac{d^2u}{dx^2})*l$$(eq44)"
    ]
   },
   {
@@ -1057,10 +1004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\frac{d^2u}{dx^2} = \\frac{(\\rho_s-\\rho_l)g}{\\mu}\n",
-    "\\label{eq46}\n",
-    "\\end{equation} "
+    "$$\\frac{d^2u}{dx^2} = \\frac{(\\rho_s-\\rho_l)g}{\\mu}$$(eq46)"
    ]
   },
   {
@@ -1074,10 +1018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u(x) = \\frac{(\\rho_s-\\rho_l)g}{2\\mu}x^2 + C_1 x + C_2\n",
-    "\\label{eq47}\n",
-    "\\end{equation} "
+    "$$u(x) = \\frac{(\\rho_s-\\rho_l)g}{2\\mu}x^2 + C_1 x + C_2$$(eq47) "
    ]
   },
   {
@@ -1098,30 +1039,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "u(x) = \\frac{(\\rho_s-\\rho_l)g}{2\\mu}x^2 - \\frac{(\\rho_s-\\rho_l)g}{8\\mu}d^2\n",
-    "\\label{eq48}\n",
-    "\\end{equation} "
+    "$$u(x) = \\frac{(\\rho_s-\\rho_l)g}{2\\mu}x^2 - \\frac{(\\rho_s-\\rho_l)g}{8\\mu}d^2$$(eq48)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "\\bar{u}=\\frac{1}{d}\\int^{d/2}_{-d/2} u(x) dx = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^2\n",
-    "\\label{eq49}\n",
-    "\\end{equation}"
+    "$$\\bar{u}=\\frac{1}{d}\\int^{d/2}_{-d/2} u(x) dx = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^2$$(eq49)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "Q = \\bar{u} d = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^3\n",
-    "\\label{eq50}\n",
-    "\\end{equation}"
+    "$$Q = \\bar{u} d = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^3$$(eq50)"
    ]
   }
  ],
