--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F61.PNG\" width=\"500\">\n",
-    "<center> Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle.\n"
+    "<center> Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle.<\\center>\n"
    ]
   },
   {
