Revert "Merge branch 'ode_review'"
This reverts commit 26925759bb59831f719ac138a6528b7271bc58e3, reversing
changes made to 61cf7096383f05d4ec5fbe2203481dc11f613f7a.

--- a/notebooks/c_mathematics/differential_equations/3_first-order_odes.ipynb
+++ b/notebooks/c_mathematics/differential_equations/3_first-order_odes.ipynb
@@ -197,15 +197,15 @@
     "\n",
     "HOW TO FIND INT FACTORS\n",
     "\n",
-    "In simpler cases it may be found by inspection. In general:\n",
+    "In simpler cases may find by inspection. In general:\n",
     "\n",
-    "The exactness condition $\\partial M / \\partial y = \\partial N / \\partial x$, so for $FP dx + FQ dy = 0$ the exactness condition is\n",
+    "The exactness condition $ \\partial M / \\partial y = \\partial N / \\partial x $, so for $FP dx + FQ dy = 0$ the exactness condition is\n",
     "\n",
     "$$ \\frac{\\partial}{\\partial y} (FP) = \\frac{\\partial}{\\partial x} (FQ) $$\n",
     "\n",
     "$$ F_y P + FP_y = F_x Q + FQ_x $$\n",
     "\n",
-    "In general this would be difficult to solve, so we try a simpler case. In many practical cases there are factors that depend only on one variable. We let $F = F(x)$ so the above becomes\n",
+    "In general this would be difficult to solve, so we try a simpler case. IN many practical cases there are factors that depend only on one variable. We let $F = F(x)$ so the above becomes\n",
     "\n",
     "$$ FP_y = F'Q + FQ_x $$\n",
     "\n",
@@ -354,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
