--- a/notebooks/c_mathematics/differential_equations/5_ode_series.ipynb
+++ b/notebooks/c_mathematics/differential_equations/5_ode_series.ipynb
@@ -49,15 +49,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(series_solution)=\n",
-    "# Series solutions of ODEs\n",
+    "# Series Solutions of ODEs\n",
     "\n",
     "{eq}`eq2` A point $x = x_0$ is an **ordinary point** if $p(x)$ and $q(x)$ are analytic on some interval about $x_0$, as opposed to a **singular point**. If $x_0$ is a singularity of functions $p(x)$ and $q(x)$ but such that $(x-x_0)p(x)$ and $(x-x_0)^2 q(x)$ are analytic at $x_0$, then $x_0$ is a **regular singular point**.\n",
     "\n",
     "Note that it is possible to translate the point $x_0$ to the origin. We can also analyse the behaviour at infinity with the transformation $x = 1/t$.\n",
     "\n",
-    "(power_series)=\n",
-    "## Power series Method\n",
+    "## Power Series Method\n",
     "\n",
     "A **power series** in powers of $x-x_0$ is an infinite series\n",
     "\n",
@@ -69,62 +67,26 @@
     "\n",
     "We assume the solution of {eq}`eq2` to be of the form of the power series, so that\n",
     "\n",
-    "$$ y' = \\sum_{m=1}^{\\infty} m a_m (x - x_0)^{m-1} \\\\\n",
-    "y'' = \\sum_{m=2}^{\\infty} m(m-1) a_m (x - x_0)^{m-2} $$\n",
+    "$$ y' = \\sum_{m=0}^{\\infty} m a_m (x - x_0)^{m-1} \\\\\n",
+    "y'' = \\sum_{m=0}^{\\infty} m(m-1) a_m (x - x_0)^{m-2} $$\n",
     "\n",
     "The idea to solve {eq}`eq2` is:\n",
     "1. Represent $p(x)$ and $q(x)$ by power series\n",
     "2. Substitute $y$ and its derivatives in {eq}`eq2`\n",
-    "3. Equate coefficients of like powers of $x$ and determine them successively\n",
-    "\n",
-    "To demonstrate this, lets look at a simple example, the simple harmonic oscillator $y'' + y = 0$. Inserting the above power series into the ODE (assuming $x_0 = 0$) yields\n",
-    "\n",
-    "$$ \\sum_{m=2}^{\\infty} m(m-1) a_m x^{m-2} + \\sum_{m=0}^{\\infty} a_m x^m  = 0 $$\n",
-    "\n",
-    "We cannot solve this yet as the summands involve different powers of x and the lower limits are different. To circumvent this, we can use a shifted index $n = m-2$ for $y''$ and then relabel $n \\rightarrow m$:\n",
-    "\n",
-    "$$ y''(x) = \\sum_{m=0}^{\\infty} a_{m+2} (m+2)(m+1) x^m $$\n",
-    "\n",
-    "Now we can procceed\n",
-    "\n",
-    "$$  \\sum_{m=0}^{\\infty} a_{m+2} (m+2)(m+1) x^m + \\sum_{m=0}^{\\infty} a_m x^m  = 0 $$\n",
-    "\n",
-    "$$ \\therefore \\  \\sum_{m=0}^{\\infty}[a_{m+2} (m+2)(m+1) + a_m] x^m = 0 $$\n",
-    "\n",
-    "We require the overall coefficient of each and every power of x to vanish. This is the only way to guarantee that the LHS equals zero for any $x$. Thus, we can write\n",
-    "\n",
-    "$$ [a_{m+2} (m+2)(m+1) + a_m = 0 $$\n",
-    "\n",
-    "$$ \\therefore \\ a_{m+2} = - \\frac{1}{(m+2)(m+1)} a_m $$\n",
-    "\n",
-    "which is known as a **recurrence relation**. It seperately links $a_m$ together for even $m$ and odd $m$. Using the recurrence relation, we can determine all the coefficients of the power series and thus determine the answer of the ODE. Thus, for the simple harmonic oscillator, we find for even $m = 2k$:\n",
-    "\n",
-    "$$ a_{2(k+1)} = - \\frac{1}{(2k+2)(2k+1)} a_{2k} $$\n",
-    "\n",
-    "and by inspection we see that\n",
-    "\n",
-    "$$ a_{2k} = \\frac{(-1)^k}{(2k)!} a_0 $$\n",
-    "\n",
-    "Using the same procedure for odd $m = 2k+1$ we find by inspection that\n",
-    "\n",
-    "$$ a_{2k + 1} = \\frac{(-1)^k}{(2k + 1)!} a_1 $$\n",
-    "\n",
-    "Thus, relabelling $k \\rightarrow m$, we can write\n",
-    "\n",
-    "$$ y(x) = a_0 \\sum_{m=0}^{\\infty} \\frac{(-1)^m}{(2m)!} x^{2m} + a_1 \\sum_{m=0}^{\\infty} \\frac{(-1)^m}{(2m + 1)!} x^{2m + 1} $$\n",
-    "\n",
-    "We can recognise the two power series as the sine and cosine functions respectively. Thus, the answer to the ODE can be written as\n",
-    "\n",
-    "$$ y(x) = a_0 cos(x) + a_1 sin(x) $$\n",
-    "\n",
-    "which, as expected, is the solution to the simple harmonic oscillator. Note that this is the general solution with the undetermined coefficients $a_0$ and $a_1$ acting as the two required arbitrary constants."
+    "3. Equate coefficients of like powers of $x$ and determine them successively"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(frobenius)=\n",
     "## Frobenius method\n",
     "\n",
     "Consider a second-order linear ODE\n",
@@ -134,97 +96,12 @@
     "<div style=\"box-shadow: 0px 0px 7px 1px #9DC1BD; padding:15px;\">\n",
     "\n",
     "**Theorem (Fuchs)** If $x = x_0$ is a regular singular point, then the solutions of a differential equation:\n",
-    "1. are analytic on some neighbourhood around $x_0$ \n",
-    "2. or they have a pole or a logarithmic term.\n",
+    "    1. are analytic on some neighbourhood around $x_0$ \n",
+    "    2. or they have a pole or a logarithmic term.\n",
     "    \n",
     "</div>\n",
     "\n",
-    "The solution to the ODE can be expressed using a generalised Frobenious series, meaning that any solution can be written as\n",
-    "\n",
-    "$$ y(x) = \\sum_{m=0}^{\\infty} a_m (x - x_0)^{m+r} $$\n",
-    "\n",
-    "where $a_m \\neq 0$, since if it were zero we can absorb a factor of $(x - x_0)$ into $(x - x_0)^r$. This condition leads to the **indicinal equation** for $r$ (i.e. the equation for the index $r$), which is a quadratic. Usually there are two solutions and hence two series, however, if the roots for $r$ differ by an integer, we have to be careful, for reasons that will be explained below. The best way to demonstrate the Frobenious method is through an example. We will solve **Bessel's equation** which in standard form is\n",
-    "\n",
-    "$$ y'' + \\frac{1}{x} y' +(1 - \\frac{s^2}{x^2}) y = 0 $$\n",
-    "\n",
-    "where $s \\geq 0$, $p(x) = 1/x$ and $q(x) = 1 - \\frac{s^2}{x^2}$. So $p$ and $q$ are not analytic at $x = 0$, and $x = 0$ is a singular point. Also $(x – x_0)p(x)$ and $(x – x_0)^2 q(x)$ are analytic at $x_0 = 0$, thus $x_0=0$ is a regular singluar point and so we can use the Frobenious method to solve the ODE. Therefore we substitue\n",
-    "\n",
-    "$$ y(x) = \\sum_{m=0}^{\\infty} a_m x^{m+r}, \\ \\ \\ \\ \\ \\ \\ \\ y'(x) = \\sum_{m=0}^{\\infty} a_m (m+r) x^{m+r-1}, \\ \\ \\ \\ \\ \\ \\ \\ y''(x) = \\sum_{m=0}^{\\infty} a_m (m+r) (m+r-1) x^{m+r-2} $$\n",
-    "\n",
-    "into Bessel's equation, noting that the limits are all $m = 0$ since the $m = 0$ and $m = 1$ terms do not necessarily differentiate to zero. If $r$ is not an integer then the leading term does not vanish upon differentiating. Thus we get\n",
-    "\n",
-    "$$ x^2 \\sum_{m=0}^{\\infty} a_m (m+r) (m+r-1) x^{m+r-2} + x \\sum_{m=0}^{\\infty} a_m (m+r) x^{m+r-1} + (x^2 - s^2) \\sum_{m=0}^{\\infty} a_m x^{m+r} = 0 $$\n",
-    "\n",
-    "Now absorb the $x^1, x^2$ pre-factors onto the sum\n",
-    "\n",
-    "$$ \\sum_{m=0}^{\\infty} a_m (m+r) (m+r-1) x^{m+r} + \\sum_{m=0}^{\\infty} a_m (m+r) x^{m+r} - s^2 \\sum_{m=0}^{\\infty} a_m x^{m+r} +  \\sum_{m=0}^{\\infty} a_m x^{m+r+2} = 0 $$\n",
-    "\n",
-    "Letting $n = m + 2$ in the final sum:\n",
-    "\n",
-    "$$ ... \\ + \\ ... \\ + \\ ... \\ + \\sum_{n=2}^{\\infty} a_{n-2} x^{n+r} = 0 $$\n",
-    "\n",
-    "Finally, relabel $n \\rightarrow m$, collect in powers of $x$ and split of the $m = 0$ and $m = 1$ terms of the first three\n",
-    "sums:\n",
-    "\n",
-    "$$ a_0 \\left[r(r-1) + r - s^2 \\right] x^r + a_1 \\left[(r+1)r + (r+1) - s^2 \\right] x^{r+1} + \\sum_{m=2}^{\\infty} \\left[a_m \\left[ (m + r)^2 - s^2 \\right] + a_{m-2} \\right] x^{m+r} = 0 $$\n",
-    "\n",
-    "Similarly to the power series method, we require all coefficients infront of each power of $x$ to vanish. The first two terms yield the indicial equation for determinind $r$. The general term inside the summation gives the recurrence relation that generates the coefficients of the power series solution.\n",
-    "\n",
-    "For $m = 0$, after simplification the indicial equation becomes:\n",
-    "\n",
-    "$$ r^2 - s^2 = 0 \\ \\ \\ \\ \\Rightarrow \\ \\ \\ \\ r = \\pm s $$\n",
-    "\n",
-    "where $s$ is positive. Remember that $a_0$ **cannot be zero**.\n",
-    "\n",
-    "For $m = 1$:\n",
-    "\n",
-    "$$ a_1 \\left[ (r+1)^2 - s^2 \\right] = 0 $$\n",
-    "\n",
-    "thus either\n",
-    "\n",
-    "$$ a_1 = 0 \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\text{or} \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ (r+1)^2 - s^2 = 0 $$\n",
-    "\n",
-    "For now we will only consider the $a_1 = 0$ possibility.\n",
-    "\n",
-    "for $m \\geq 2$:\n",
-    "\n",
-    "$$ a_m = \\frac{-a_{m-2}}{(r+m)^2 - s^2} = \\frac{-a_{m-2}}{m^2 +2rm} $$\n",
-    "\n",
-    "where the last equality comes from the indicial equation, $r^2 = s^2$. Using the recursion relation to evaluate the $a_m$ coefficients and inserting in the generalised power series yields the answer to the ODE\n",
-    "\n",
-    "$$ y(x) = x^r \\left[ 1 - \\frac{x^2}{2(2+r} + \\frac{x^4}{2 \\times 4(2 + 2r)(4 + 2r)} - \\ ... \\right]$$\n",
-    "\n",
-    "Remembering that $a_1 = 0$, the recurrence relation implies that all $a_{odd} = 0$ and thus there is no second series. However, the two roots $r = \\pm s$ will usually yield the two independent solutions.\n",
-    "\n",
-    "Now lets go back to the second indicial equation (from $m = 1$) and consider $\\left[ (r+1)^2 - s^2 \\right] = 0$. Since $r^2 = s^2$ (from the first indicial equation), this requires $2r + 1 = 0$ or $r = -1/2$ and is thus the special case for $s = 1/2$. Therefore we will look for solutions with $s = 1/2$.\n",
-    "\n",
-    "For the $r = 1/2$ solution, the recurrence relation becomes\n",
-    "\n",
-    "$$ a_m = \\frac{- a_{m-2}}{m(m+1)} $$\n",
-    "\n",
-    "and thus\n",
-    "\n",
-    "$$ y(x) = a_0 x^{1/2} \\left[ 1 - \\frac{x^2}{3!} + \\frac{x^4}{5!} - \\ ... \\right] $$\n",
-    "\n",
-    "which can be written as \n",
-    "\n",
-    "$$ y(x) = \\frac{a_0} {x^{1/2}} \\left[ x - \\frac{x^3}{3!} + \\frac{x^3}{5!} - \\ ... \\right] = \\frac{a_0 sinx} {x^{1/2}} $$\n",
-    "\n",
-    "There is no second series, since $a_1 = 0$ for $r = 1/2$.\n",
-    "\n",
-    "Now lets consider the $r = - 1/2$ solution. The recurrence relation becomes\n",
-    "\n",
-    "$$ a_m = \\frac{- a_{m-2}}{m(m-1)} $$\n",
-    "\n",
-    "In this cae, $a_1$ is undetermined and thus the solution is given by two series:\n",
-    "\n",
-    "$$  y(x) = a_0 x^{- 1/2} \\left[ 1 - \\frac{x^2}{2!} + \\frac{x^4}{4!} - \\ ... \\right] + a_1 x^{- 1/2} \\left[ x - \\frac{x^3}{3!} + \\frac{x^5}{5!} - \\ ... \\right] $$\n",
-    "\n",
-    "which can be written as\n",
-    "\n",
-    "$$ y(x) = a_0 \\frac{cosx} {x^{1/2}} + a_1 \\frac{sinx} {x^{1/2}} = y_{GS}(x) $$\n",
-    "\n",
-    "The second term just duplicates the solution we found for $r = 1/2$, so that solution is already present here, which is why we identify this solution as the general solution, $y_{GS}(x)$. This occurs when the roots differ by an integer, as they do here ($r = - 1/2, + 1/2$), which is why we must be careful when roots for $r$ do differ by an integer. "
+    "Fuchs' theorem allows "
    ]
   }
  ],
@@ -244,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
