--- a/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
+++ b/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
@@ -23,7 +23,7 @@
     "```{index} Method of characteristics\n",
     "```\n",
     "\n",
-    "The main idea behind this method is a popular one: we want to reduce the PDE to an ODE, which are in general much easier to solve. We do that by analysing the PDE along specially chosen curves in $xy$ plane, which we call characteristic curves or just **characteristics**. We parameterise them by the parameter $s$, such that $x = x(s), y = y(s)$ and we choose them such that the following system of ODEs is satisfied:\n",
+    "The main idea behind this method is a popular one: we want to reduce the PDE to an ODE, which are in general much easier to solve. We do that by analysing the PDE along specially chosen curves in $xy$ plane, which we call characteristic curves or just **characteristics**. We parameterise them by the parameter $s$, such that $ x = x(s), y = y(s) $ and we choose them such that the following system of ODEs is satisfied:\n",
     "\n",
     "$$ \\frac{dx}{ds} = a, \\quad \\frac{dy}{ds} = b, \\quad \\frac{du}{ds} = f$$\n",
     "\n",
@@ -223,7 +223,7 @@
     "\n",
     "$$ (x + y)u_x + y u_y = xyu $$\n",
     "\n",
-    "with the boundary condition $u(x,y) = e^{x^2/4} $ for $y = x$."
+    "with the boundary condition $ u(x,y) = e^{x^2/4) $ for $y = x$."
    ]
   },
   {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
