--- a/notebooks/c_mathematics/differential_equations/8_pde_second_order.ipynb
+++ b/notebooks/c_mathematics/differential_equations/8_pde_second_order.ipynb
@@ -24,11 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Any elliptic, parabolic or hyperbolic PDE can be reduced to the following **canonical forms** with a suitable coordinate transformation $\\xi = \\xi(x, y), \\qquad \\eta = \\eta(x,y)$\n",
+    "Any elliptic, parabolic or hyperbolic PDE can be reduced to the following **canonical forms** with a suitable coordinate transformation $ \\xi = \\xi(x, y), \\qquad \\eta = \\eta(x,y) $\n",
     "\n",
-    "1. Canonical form for hyperbolic PDEs: $u_{\\xi \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $ or $ u_{\\xi \\xi} - u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta})$\n",
-    "2. Canonical form for parabolic PDEs: $u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $ or $ u_{\\xi \\xi} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta})$\n",
-    "3. Canonical form for elliptic PDEs: $u_{\\xi \\xi} + u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta})$\n",
+    "1. Canonical form for hyperbolic PDEs: $ u_{\\xi \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $ or $ u_{\\xi \\xi} - u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $\n",
+    "2. Canonical form for parabolic PDEs: $ u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $ or $ u_{\\xi \\xi} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $\n",
+    "3. Canonical form for elliptic PDEs: $ u_{\\xi \\xi} + u_{\\eta \\eta} = \\phi(\\xi, \\eta, u, u_{\\xi}, u_{\\eta}) $\n",
     "\n",
     "We find the coordinate transformation\n",
     "\n",
@@ -73,7 +73,7 @@
     "\n",
     "Where $\\lambda_1 = \\xi_x / \\xi_y$ and $\\lambda_2 = \\eta_x / \\eta_y$ and they need to be different for the transformation to make sense. Because $b^2 - 4ac > 0$ we know that they will be two distinct real numbers.\n",
     "\n",
-    "But what do the quantities $\\xi_x / \\xi_y $ and $ \\eta_x / \\eta_y$ actually represent? They are the slopes of the **characteristics** $\\xi(x, y) = \\text{const.}$ and $\\eta(x, y) = \\text{const.}$ Notice that if we hadn't divided the equations by $\\xi_y$ and $\\eta_y$ we would have\n",
+    "But what do the quantities $ \\xi_x / \\xi_y $ and $ \\eta_x / \\eta_y $ actually represent? They are the slopes of the **characteristics** $ \\xi(x, y) = \\text{const.} $ and $\\eta(x, y) = \\text{const.} $ Notice that if we hadn't divided the equations by $\\xi_y$ and $\\eta_y$ we would have\n",
     "\n",
     "$$ \\xi_x = \\lambda_1 \\xi_y, \\qquad \\eta_x = \\lambda_2 \\eta_y $$\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "$$ y + \\lambda_1 x = c_1, \\qquad y + \\lambda_2 x = c_2 $$\n",
     "\n",
-    "where $c_1, c_2$ are integration constants, so we choose $\\xi$ and $\\eta$ to equal them\n",
+    "where $c_1, c_2$ are integration constant, so we choose $\\xi$ and $\\eta$ to equal them\n",
     "\n",
     "$$ \\xi = y + \\lambda_1 x, \\qquad \\eta = y + \\lambda_2 x $$\n",
     "\n",
@@ -177,11 +177,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example: $u_{xx} + 2u_{xy} + u_{yy} = 0$\n",
+    "### Example: $ u_{xx} + 2u_{xy} + u_{yy} = 0 $\n",
     "\n",
     "Kreyszig problem set 12.4, question 11.\n",
     "\n",
-    "This is a parabolic PDE because $2^2 - 4 = 0$. Therefore we have a single root\n",
+    "This is a parabolic PDE because $ 2^2 - 4 = 0 $. Therefore we have a single root\n",
     "\n",
     "$$ \\lambda = \\frac{-b}{2a} = -1 $$\n",
     "\n",
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
