--- a/notebooks/c_mathematics/differential_equations/1_de_introduction.ipynb
+++ b/notebooks/c_mathematics/differential_equations/1_de_introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to differential equations\n",
     "\n",
-    "Physical phenomena are described by functions that tell us about how the observables change in time, in space and with respect to other parameters of the observed system. That means that the equations which connect such functions and their changes will often contain derivatives. A **differential equation** is an equation involving derivatives of functions. For example, Newton's second law is a differential equation:\n",
+    "Physical phenomenons are described by functions that tell us about how the observables change in time, in space and with respect to other parameters of the observed system. That means that the equations which connect such functions and their changes will often contain derivatives. A **differential equation** is an equation involving derivatives of functions. For example, Newton's second law is a differential equation:\n",
     "\n",
     "$$ \\mathbf{F} = m \\mathbf{a} = m \\frac{d \\mathbf{v}}{dt} = m \\frac{d^2 \\mathbf{r}}{dt^2}, $$\n",
     "\n",
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
