--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F61.PNG\" width=\"500\">\n",
-    "<center> Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle.<\\center>\n"
+    "<center> Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle.\n"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau =\\mu \\frac{d u}{dy}$$ (eq1)"
+    "$$\\tau =\\mu \\frac{d u}{dy}$$ (equ1)"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can be easily derived by using equation {eq}`eq1`, in which the velocity $u$ is expressed by equation {eq}`eq4`. Hence the result is"
+    "This can be easily derived by using equation {eq}`equ1`, in which the velocity $u$ is expressed by equation {eq}`eq4`. Hence the result is"
    ]
   },
   {
