--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau =\\mu \\frac{d u}{dy}$$ (equ1)"
+    "$$\\tau =\\mu \\frac{d u}{dy}$$ (equa1)"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining the equations {eq}`eq1` and {eq}`eq2`, and integrating the result we have the velocity $u$ profile as a function of $y$:"
+    "Combining the equations {eq}`equa1` and {eq}`eq2`, and integrating the result we have the velocity $u$ profile as a function of $y$:"
    ]
   },
   {
