--- a/_sources/b_coding/Intro to Python/19_Classes.ipynb
+++ b/_sources/b_coding/Intro to Python/19_Classes.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "A very popular concept in Computer Science is *an object*. Objects are theoretical entities that may contain data (*fields*) as well as specific functionalities (*methods*). Classes in Python provide a means of implementing *types* objects. \n",
     "\n",
-    "Oof... that is a lot of abstract terminology. Lets have a look at an example:"
+    "Oof... that is a lot of abstract terminologies. Let us have a look at an example:"
    ]
   },
   {
@@ -30,12 +30,12 @@
    "source": [
     "class Dog:\n",
     "    \n",
-    "    # initialise an INSTANCE of an object\n",
+    "    # initialise an INSTANCE of the object\n",
     "    def __init__(self, name):\n",
     "        # assign the supplied name to the Dogs name\n",
     "        self.name = name\n",
     "    \n",
-    "    # only dogs can bark!\n",
+    "    # only dogs can bark\n",
     "    def bark(self):\n",
     "        print(\"woof-woof!\")   \n",
     "        \n",
@@ -44,7 +44,7 @@
     "d2 = Dog(\"Chloe\")\n",
     "d3 = Dog(\"Spooky\")\n",
     "\n",
-    "\n",
+    "# make them bark\n",
     "d1.bark()\n",
     "d3.bark()\n",
     "\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have methods that allow us to set the value of the `happy` attribute. Every dog starts happy. "
+    "Now we have methods that allow us to set the value of the `happy` attribute. Every dog is happy when instantiated. "
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can probably see, `HappyDog` inherits the methods from the `Dog` class. It also has its own version of the `makeSad` method. We say that `HappyDog` class overrides the `makeSad` method of the `Dog` class. We use the `super()` method to denote inheritance from the `Dog` class.\n",
+    "As you can probably see, `HappyDog` inherits the methods from the `Dog` class. It also has its version of the `makeSad` method. We say that `HappyDog` class overrides the `makeSad` method of the `Dog` class. We use the `super()` method to denote inheritance from the `Dog` class.\n",
     "\n",
     "Whereas child classes can have multiple parent classes, it usually complicates the code and is not considered a good practice."
    ]
@@ -169,7 +169,7 @@
    "source": [
     "## Classes without `__init__`\n",
     "\n",
-    "Classes without the `__init__` method cannot produce objects, they cannot be instantiated. They can still provide functionality however. On a basic level, they can be treated as our own library:"
+    "Classes without the `__init__` method cannot produce objects, they cannot be instantiated. They can still provide functionality, however. On a basic level, they can be treated as our own library:"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here `ComplexNum` is a regular class used to represent complex numbers. `ComplexMath` provides some basic arithmetic operations on those numbers. There is no need to istantiate it, we just need the functionality. \n",
+    "Here `ComplexNum` is a regular class used to represent complex numbers. `ComplexMath` provides some basic arithmetic operations on those numbers. There is no need to instantiate it, we just need the functionality. \n",
     "\n",
     "**REMARK**: `__str__` method must be defined if you want to have a nice way of printing the instances of your class.\n",
     "\n",
@@ -230,7 +230,7 @@
     "(classes_exercises)=\n",
     "## Exercises\n",
     "\n",
-    "* **Aliens** Define an `Alien` class which istantiates aliens with `age` equal to 1. It should also be able to increase the age of an alien by 1 by calling the `birthday()` method."
+    "* **Aliens** Define an `Alien` class which instantiates aliens with `age` equal to 1. It should also be able to increase the age of an alien by 1 by calling the `birthday()` method."
    ]
   },
   {
@@ -261,10 +261,8 @@
     "\n",
     "```python\n",
     "def reproduce(self):\n",
-    "    if self.isAlive and random.randint(0,10) > self.age:\n",
-    "        return Alien()\n",
-    "    else:\n",
-    "        return None\n",
+    "    return self.isAlive and random.randint(0,6) > self.age\n",
+    " \n",
     "```"
    ]
   },
@@ -292,10 +290,8 @@
     "            self.isAlive = False\n",
     "            \n",
     "    def reproduce(self):\n",
-    "        if self.isAlive and random.randint(0,6) > self.age:\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
+    "        return self.isAlive and random.randint(0,6) > self.age\n",
+    "\n",
     "```\n",
     "\n",
     "````"
@@ -308,15 +304,18 @@
     "* **Simulating population** Now let us simulate the population of aliens which can die and reproduce. \n",
     "\n",
     "1) On each time step (`for` loop) we will make all aliens celebrate `birthday`, `reproduce` and `considerDying`. \n",
+    "\n",
     "2) An alien should be removed from the population when it dies. \n",
     "\n",
-    "3) Also, when reproduction is sucessfull, new alien is added to the population. Make sure to add the new aliens at the end of the time step, so they are not considered it the timestep they were born in. \n",
+    "3) Also, when reproduction is successful, a new alien is added to the population. Make sure to add the new aliens at the end of the time step, so they are not considered it the timestep they were born in. \n",
     "\n",
     "4) Do the simulation for `100` timesteps. \n",
     "\n",
     "5) You might want to print the size of the population vs time using matplotlib.\n",
     "\n",
-    "6) Start with only one alien in the population."
+    "6) Start with only one alien in the population.\n",
+    "\n",
+    "**REMARK**: This model of the population does not ensure that the size of the population will be stable. For now, the population ceases in the first couple of days or grows exponentially. If you want to explore the simulation more, consider adding population size in `reproduce` method, it should limit the exponential growth. "
    ]
   },
   {
@@ -345,11 +344,8 @@
     "            self.isAlive = False\n",
     "            \n",
     "    def reproduce(self):\n",
-    "        if self.isAlive and random.randint(0,6) > self.age:\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
-    "            \n",
+    "        return self.isAlive and random.randint(0,6) > self.age\n",
+    "\n",
     "\n",
     "aliens = [Alien()]\n",
     "timeSeries = []\n",
