--- a/notebooks/a_modules/intro.ipynb
+++ b/notebooks/a_modules/intro.ipynb
@@ -47,7 +47,7 @@
     "### Programming for Geoscientists\n",
     "\n",
     "[<!-- module-progr badge --><span class=\"module module-progr\">Programming for Geoscientists</span>](module-progr)\n",
-    "\n",
+    "- {doc}`NumPy arrays <notebooks\\coding\\NumPy_Arrays.ipynb>`\n",
     "\n",
     "## Year 2\n",
     "(module-mse1)=\n",
@@ -158,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
